--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
    </style>
    <body style='background-color:#e9ecef;'>
       <div id="containerId" class="jumbotron text-center my-25">
-         <h4>Get answer to your question (Yes or No)</h4>
-         <p>Decision: <span id="decision">press button...</span></p>
+         <h4>Yes or No?</h4>
+         <p>Answer: <span id="decision">press button...</span></p>
          <button id="processBtnId" onclick="getAnswer()" type="button" class="button btn btn-success">Run</button>  
       </div>
    </body>
